<resources>
    <string name="app_name">UPIC2</string>
    <string name="usuario">Usuario:</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_registro">Registrate</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="aun_no_tienes_cuenta">¿Aún no tienes cuenta?</string>
    <string name="crea_tu_cuenta_en_upic">Crea tu cuenta en UPIC</string>
    <string name="registrate">Registrate!</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="telefono">Teléfono</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirma_tu_contrase_a">Confirma tu contraseña</string>
    <string name="correo_electronic">Correo electrónico.</string>
    <string name="contrase">Contraseña:</string>
    <string name="con">Contraseña.</string>
    <string name="iniciar_sesi_n">Iniciar sesión.</string>
    <string name="todo">TODO</string>
    <string name="a_n_no_tienes_cuenta">¿Aún no tienes cuenta?</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="item1">Seguro</string>
    <string name="item2">¿Cómo usar nuestra aplicación?</string>
    <string name="item3">Configuración</string>
    <string name="item4">Perfil personal</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_menupr">Menupr</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_seguro">Seguro</string>
    <string name="title_help">Ayuda</string>
    <string name="title_mec">Mecánico</string>
    <string name="title_ele">Eléctrico</string>
    <string name="title_vul">Vulcanizadora</string>
    <string name="im_ele">TODO</string>
    <string name="im_vil">TODO</string>
    <string name="title_home">Mecánico automotriz</string>
    <string name="title_dashboard">Eléctrico automotriz</string>
    <string name="title_notifications">Vulcanizadora</string>
    <string name="mecanica_express">Mecánica Express</string>
    <string name="servicio_de_mecanico">Servicio de mecánico</string>
    <string name="electrico_express">Eléctrico Express</string>
    <string name="servicio_de_electrico">Servicio de eléctrico</string>
    <string name="vulca_express">Vulcanizadora Express</string>
    <string name="servicio_de_vulcanizadora">Servicio de vulcanizadora</string>
    <string name="toast_message">Haz cancelado el servicio</string>
    <string name="especifica_tu_situacion">Especifica tu situación</string>
    <string name="comentarios">Comentarios</string>
    <string name="pedir_servicio">Pedir servicio</string>
    <string name="comentarioss">Comentarios</string>
    <string name="te_gust_nuestro_servicio">¿Te gustó nuestro servicio?</string>
    <string name="escribe_tu_comentario">Escribe tu comentario</string>
    <string name="enviar">Enviar</string>
    <string name="muchas_gracias_por_pedir_tu_upic_no_tardar_en_llegar">Muchas gracias por pedir tu UPIC, no tardará en llegar</string>
    <string name="siguiente">Siguiente</string>
    <string name="el_upic_va_en_camino">El UPIC va en camino</string>
    <string name="el_asociado_llegar_en_5_min">El asociado llegará en 5 min</string>
    <string name="a_n_no_llega">¿Aún no llega?</string>
    <string name="lleg">Llegó</string>
    <string name="mec_nicos_disponibles">Mecánicos Disponibles</string>
    <string name="tu_upic_est_en_proceso">Tu UPIC está en proceso</string>
    <string name="no_te_desesperes_el_asociado_est_haciendo_lo_que_puede_gracias">No te desesperes el asociado está haciendo lo que puede. ¡Gracias!</string>
    <string name="alg_n_problema">¿Algún problema?</string>
    <string name="termin">Terminó</string>
    <string name="reporte">Reporte</string>
    <string name="describe_la_situaci_n">Describe la situación</string>
    <string name="qu_quieres_hacer">¿Qué quieres hacer?</string>
    <string name="reportar_y_cancelar">Reportar y cancelar</string>
    <string name="cancelar">Cancelar</string>
    <string name="datos_del_automovil">Datos del automóvil</string>
    <string name="cilindraje">Cilindraje</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="tipo_de_veh_culo">Tipo de vehículo</string>
    <string name="a_o">Año</string>
    <string name="reporte_del_problema">Reporte del Problema</string>
    <string name="especifica_tu_situaci_n">Especifica tu situación</string>
    <string name="describe_la_situaci_nn">Describe la situación</string>
    <string name="datos_de_tu_veh_culo">Datos de tu vehículo</string>
    <string name="modeloo">Modelo</string>
    <string name="confirmar">Confirmar</string>
    <string name="opiniones">Opiniones</string>
    <string name="el_servicio_est_muy_bien_100_recomendado_r_pido_y_eficaz">El servicio está muy bien, 100% recomendado, rápido y eficaz</string>
    <string name="servicio">\"Servicio de \"</string>
    <string name="tipo">TIPO</string>
    <string name="nombree">Nombre</string>
    <string name="usuarios">Usuarios/</string>
    <string name="marcaa">Marca</string>
    <string name="model">Modelo</string>
    <string name="cilindrajee">Cilindraje</string>
    <string name="ini_sesgoogle">Incia sesión con google</string>
    <string name="registrarse">Registrarse</string>
    <string name="Reportee">Reporte</string>
    <string name="especifica_tu_situacionn">Especifica tu situacion</string>
    <string name="describe_la_situacionn">Describe la situacion</string>
    <string name="qu_quieres_hacerr">¿Qué quieres hacer?</string>
    <string name="reportar_y_cancelarr">Reportar y cancelar</string>
    <string name="cancelarr">Cancelar</string>
    <string name="Mecanicos_disp">Mecánicos Disponibles</string>
    <string name="elect_dips">Eléctricos Disponibles</string>
    <string name="vul_disp">Vulcanizadoras Disponibles</string>
    <string name="serv_mec">Servicios/Mecánicos</string>
    <string name="tipoo">TIPO</string>
    <string name="mecanicoss">Mecánicos</string>
    <string name="serv_elec">Servicios/Eléctricos</string>
    <string name="tip">TIPO</string>
    <string name="elecr">Eléctricos</string>
    <string name="serv_vul">Servicios/Vulcanizadoras</string>
    <string name="tipp">TIPO</string>
    <string name="vvul">Vulcanizadoras</string>
    <string name="nom">Nombre</string>
    <string name="ap">Apellido</string>
    <string name="maiil">Correo</string>
    <string name="cel">Teléfono</string>
    <string name="cil">Cilindraje</string>
    <string name="marc">Marca</string>
    <string name="mod">Modelo</string>
    <string name="tip_v">TipoVehiculo</string>
    <string name="an">Anio</string>
    <string name="us">Usuarios/</string>
    <string name="cont_ctanos">Contáctanos</string>
</resources>