<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Llegada">

    <TextView
        android:id="@+id/lleg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/el_upic_va_en_camino"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="436dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Encuanto"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_margin="12dp"
            android:text="@string/el_asociado_llegar_en_5_min"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="254dp"
            app:srcCompat="@drawable/perfilele" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="5 MIN"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/a_n_no_llega"
            tools:ignore="TouchTargetSizeCheck"
            android:onClick="callRep"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/lleg"
            android:onClick="callProc"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>